# ManoMonitor

./: .env.example  .gitignore  MIGRATION_NOTES.md  MULTI_MONITOR_SETUP.md  README.md  manomonitor.service  pyproject.toml  test_vendor_lookup.py
docs/: MAC_RANDOMIZATION.md
manomonitor/: install.sh
manomonitor/src/manomonitor/: config.py
manomonitor/src/manomonitor/api/: __init__.py  routes.py
manomonitor/src/manomonitor/capture/: __init__.py
manomonitor/src/manomonitor/database/: connection.py
manomonitor/src/manomonitor/notifications/: __init__.py  base.py  ifttt.py
manomonitor/src/manomonitor/utils/: __init__.py
manomonitor/src/manomonitor/web/: __init__.py  views.py
manomonitor/static/css/: custom.css
manomonitor/static/js/: app.js
manomonitor/templates/: base.html  device_detail.html  map.html  notifications.html  settings.html
manomonitor/templates/partials/: device_edit_form.html  present_devices.html  stats.html
migrations/: 003_add_mac_randomization_detection.sql
scripts/: README.md  check_wifi_safety.py  manomonitor-reporter.service  secondary_reporter.py  setup-secondary.sh
src/manomonitor/: __init__.py  cli.py  config.py  main.py
src/manomonitor/api/: routes.py  websocket.py
src/manomonitor/capture/: monitor.py  network.py
src/manomonitor/database/: __init__.py  crud.py  models.py
src/manomonitor/notifications/: homeassistant.py  manager.py
src/manomonitor/utils/: __init__.py  geolocation.py  mac_fingerprinting.py  positioning.py  vendor.py
src/manomonitor/web/: views.py
templates/: base.html  devices.html  error.html  index.html  monitors.html
templates/partials/: device_row.html  devices_table.html  status_badge.html
