[project]
name = "manomonitor"
version = "1.0.0"
description = "WiFi-based device tracking and proximity detection system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "ManoMonitor" }
]
keywords = ["wifi", "presence", "detection", "home-automation", "iot", "device-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "mac-vendor-lookup>=0.1.12",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]
gps = [
    "pyserial>=3.5",  # For USB GPS dongle support
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
manomonitor = "manomonitor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manomonitor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
